--- a/lessons/01-communication.Rmd
+++ b/lessons/01-communication.Rmd
@@ -48,16 +48,15 @@ The easiest place to start when turning an exploratory graphic into an expositor
 You add labels with the `labs()` function.
 
 ```{r}
-
 #| fig-alt: |
-#|   Scatterplot of highway fuel efficiency versus engine size of cars, where 
-#|   points are colored according to the car class. A smooth curve following 
-#|   the trajectory of the relationship between highway fuel efficiency versus 
-#|   engine size of cars is overlaid. The x-axis is labelled "Engine 
-#|   displacement (L)" and the y-axis is labelled "Highway fuel economy (mpg)". 
-#|   The legend is labelled "Car type". The plot is titled "Fuel efficiency 
-#|   generally decreases with engine size". The subtitle is "Two seaters 
-#|   (sports cars) are an exception because of their light weight" and the 
+#|   Scatterplot of highway fuel efficiency versus engine size of cars, where
+#|   points are colored according to the car class. A smooth curve following
+#|   the trajectory of the relationship between highway fuel efficiency versus
+#|   engine size of cars is overlaid. The x-axis is labelled "Engine
+#|   displacement (L)" and the y-axis is labelled "Highway fuel economy (mpg)".
+#|   The legend is labelled "Car type". The plot is titled "Fuel efficiency
+#|   generally decreases with engine size". The subtitle is "Two seaters
+#|   (sports cars) are an exception because of their light weight" and the
 #|   caption is "Data from fueleconomy.gov".
 
 ggplot(mpg, aes(x = displ, y = hwy)) +
@@ -87,18 +86,20 @@ Just switch `""` out for `quote()` and read about the available options in `?plo
 #| out-width: "50%"
 #| fig-width: 3
 #| fig-alt: |
-#|   Scatterplot with math text on the x and y axis labels. X-axis label 
+#|   Scatterplot with math text on the x and y axis labels. X-axis label
 #|   says x_i, y-axis label says sum of x_i  squared, for i from 1 to n.
 
 df <- tibble(
   x = 1:10,
-  y = cumsum(x^2))
+  y = cumsum(x^2)
+)
 
 ggplot(df, aes(x, y)) +
   geom_point() +
   labs(
     x = quote(x[i]),
-    y = quote(sum(x[i] ^ 2, i == 1, n)))
+    y = quote(sum(x[i]^2, i == 1, n))
+  )
 ```
 
 ### Exercises 1.2.1 {.unnumbered}
@@ -124,7 +125,6 @@ knitr::include_graphics("images/fueleconomy.png")
 
 **Ans-1.2.1.2**
 ```{r Ans-1.2.1.2}
-  
 ```
 
 
@@ -140,7 +140,6 @@ First, you might have a tibble that provides labels.
 In the following plot we pull out the cars with the highest engine size in each drive type and save their information as a new data frame called `label_info`.
 
 ```{r}
-
 # slice_head operates by group, so when n = 1 it means the size of the group
 # case_when where the left hand side determines which values match this case and the right hand side provides the replacement value.
 
@@ -168,15 +167,15 @@ They're larger than the rest of the text on the plot and bolded.
 
 ```{r}
 #| fig-alt: |
-#|   Scatterplot of highway mileage versus engine size where points are colored 
-#|   by drive type. Smooth curves for each drive type are overlaid. 
+#|   Scatterplot of highway mileage versus engine size where points are colored
+#|   by drive type. Smooth curves for each drive type are overlaid.
 #|   Text labels identify the curves as front-wheel, rear-wheel, and 4-wheel.
 
 ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
   geom_point(alpha = 0.3) +
   geom_smooth(se = FALSE) +
   geom_text(
-    data = label_info, 
+    data = label_info,
     aes(x = displ, y = hwy, label = drive_type),
     fontface = "bold", size = 5, hjust = "right", vjust = "top"
   ) +
@@ -192,9 +191,9 @@ This useful package will automatically adjust labels so that they don't overlap:
 
 ```{r}
 #| fig-alt: |
-#|   Scatterplot of highway fuel efficiency versus engine size of cars, where 
-#|   points are colored according to the car class. Some points are labelled 
-#|   with the car's name. The labels are box with white, transparent background 
+#|   Scatterplot of highway fuel efficiency versus engine size of cars, where
+#|   points are colored according to the car class. Some points are labelled
+#|   with the car's name. The labels are box with white, transparent background
 #|   and positioned to not overlap.
 
 ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
@@ -215,14 +214,14 @@ Note another handy technique used here: we added a second layer of large, hollow
 
 ```{r}
 #| fig-alt: |
-#|   Scatterplot of highway fuel efficiency versus engine size of cars. Points 
-#|   where highway mileage is above 40 as well as above 20 with engine size 
-#|   above 5 are red, with a hollow red circle, and labelled with model name 
+#|   Scatterplot of highway fuel efficiency versus engine size of cars. Points
+#|   where highway mileage is above 40 as well as above 20 with engine size
+#|   above 5 are red, with a hollow red circle, and labelled with model name
 #|   of the car.
 
 potential_outliers <- mpg |>
   filter(hwy > 40 | (hwy > 20 & displ > 5))
-  
+
 ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_point() +
   geom_text_repel(data = potential_outliers, aes(label = model)) +
@@ -266,9 +265,9 @@ Note also that the segment is styled as an arrow.
 
 ```{r}
 #| fig-alt: |
-#|   Scatterplot of highway fuel efficiency versus engine size of cars. A red 
-#|   arrow pointing down follows the trend of the points and the annotation 
-#|   placed next to the arrow reads "Larger engine sizes tend to have lower 
+#|   Scatterplot of highway fuel efficiency versus engine size of cars. A red
+#|   arrow pointing down follows the trend of the points and the annotation
+#|   placed next to the arrow reads "Larger engine sizes tend to have lower
 #|   fuel economy". The arrow and the annotation text is red.
 
 ggplot(mpg, aes(x = displ, y = hwy)) +
@@ -283,8 +282,6 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
     x = 3, y = 35, xend = 5, yend = 25, color = "red",
     arrow = arrow(type = "closed")
   )
-
-
 ```
 
 Annotation is a powerful tool for communicating main takeaways and interesting features of your visualizations.
@@ -296,7 +293,6 @@ The only limit is your imagination (and your patience with positioning annotatio
 
 **Ans-1.3.1.1:**
 ```{r Ans-1.3.1.1}
-
 ```
 
 
@@ -306,26 +302,24 @@ The only limit is your imagination (and your patience with positioning annotatio
 #| fig-show: hide
 
 ggplot(mpg, aes(displ, hwy)) +
-  geom_point() 
+  geom_point()
 ```
     
 
 **Ans-1.3.1.2:**
 ```{r Ans-1.3.1.2}
-
 ```
 
 3.a. How do labels with `geom_text()` interact with faceting? Try it by adding a geom_text element to:
 
 ```{r}
-
-g <- ggplot(mpg, aes(displ, hwy)) + geom_point()
+g <- ggplot(mpg, aes(displ, hwy)) +
+  geom_point()
 ```
 
 
 **Ans-1.3.1.3a:**
 ```{r Ans-1.3.1.3a}
-
 ```
 
 
@@ -333,8 +327,6 @@ g <- ggplot(mpg, aes(displ, hwy)) + geom_point()
     
 **Ans-1.3.1.3b:**
 ```{r Ans-1.3.1.3b}
-
-
 ```
 
   c. How can you put a different label in each facet?
@@ -342,7 +334,6 @@ g <- ggplot(mpg, aes(displ, hwy)) + geom_point()
     
 **Ans-1.3.1.3c:**
 ```{r Ans-1.3.1.3c}
-
 ```
 
 4.  What arguments to `geom_label()` control the appearance of the background box?
@@ -412,12 +403,12 @@ The most common use of `breaks` is to override the default choice:
 ```{r}
 #| fig-alt: |
 #|   Scatterplot of highway fuel efficiency versus engine size of cars,
-#|   colored by drive. The y-axis has breaks starting at 15 and ending at 40, 
+#|   colored by drive. The y-axis has breaks starting at 15 and ending at 40,
 #|   increasing by 5.
 
 ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
   geom_point() +
-  scale_y_continuous(breaks = seq(15, 40, by = 5)) 
+  scale_y_continuous(breaks = seq(15, 40, by = 5))
 ```
 
 You can use `labels` in the same way (a character vector the same length as `breaks`), but you can also set it to `NULL` to suppress the labels altogether.
@@ -427,8 +418,8 @@ For discrete scales for categorical variables, `labels` can be a named list of t
 
 ```{r}
 #| fig-alt: |
-#|   Scatterplot of highway fuel efficiency versus engine size of cars, colored 
-#|   by drive. The x and y-axes do not have any labels at the axis ticks. 
+#|   Scatterplot of highway fuel efficiency versus engine size of cars, colored
+#|   by drive. The x and y-axes do not have any labels at the axis ticks.
 #|   The legend has custom labels: 4-wheel, front, rear.
 
 ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
@@ -444,21 +435,21 @@ The plot on the right adds further customization by dividing dollar values by 1,
 Note that `breaks` is in the original scale of the data.
 
 ```{r}
-
 #| fig-width: 4
 #| fig-alt: |
-#|   Two side-by-side box plots of price versus cut of diamonds. The outliers 
+#|   Two side-by-side box plots of price versus cut of diamonds. The outliers
 #|   are transparent. On both plots the x-axis labels are formatted as dollars.
-#|   The x-axis labels on the plot start at $0 and go to $15,000, increasing 
-#|   by $5,000. The x-axis labels on the right plot start at $1K and go to 
-#|   $19K, increasing by $6K. 
+#|   The x-axis labels on the plot start at $0 and go to $15,000, increasing
+#|   by $5,000. The x-axis labels on the right plot start at $1K and go to
+#|   $19K, increasing by $6K.
 
 ggplot(diamonds, aes(x = price, y = cut)) +
   geom_boxplot(alpha = 0.05) +
-  scale_x_continuous(labels = label_dollar()) + ggplot(diamonds, aes(x = price, y = cut)) +
+  scale_x_continuous(labels = label_dollar()) +
+  ggplot(diamonds, aes(x = price, y = cut)) +
   geom_boxplot(alpha = 0.05) +
   scale_x_continuous(
-    labels = label_dollar(scale = 1/1000, suffix = "K"), 
+    labels = label_dollar(scale = 1 / 1000, suffix = "K"),
     breaks = seq(1000, 19000, by = 6000)
   )
 ```
@@ -467,8 +458,8 @@ Another handy label function is `label_percent()`:
 
 ```{r}
 #| fig-alt: |
-#|   Segmented bar plots of cut, filled with levels of clarity. The y-axis 
-#|   labels start at 0% and go to 100%, increasing by 25%. The y-axis label 
+#|   Segmented bar plots of cut, filled with levels of clarity. The y-axis
+#|   labels start at 0% and go to 100%, increasing by 25%. The y-axis label
 #|   name is "Percentage".
 
 ggplot(diamonds, aes(x = cut, fill = clarity)) +
@@ -481,13 +472,14 @@ For example, take this plot that shows when each US president started and ended 
 
 ```{r}
 #| fig-alt: |
-#|   Line plot of id number of presidents versus the year they started their 
-#|   presidency. Start year is marked with a point and a segment that starts 
-#|   there and ends at the end of the presidency. The x-axis labels are 
+#|   Line plot of id number of presidents versus the year they started their
+#|   presidency. Start year is marked with a point and a segment that starts
+#|   there and ends at the end of the presidency. The x-axis labels are
 #|   formatted as two digit years starting with an apostrophe, e.g., '53.
-#|   
+#|
 # here `id` is the ordinal number of the president, e.g. Trump is in the 12th row + 33 = 45th president
-presidential |> mutate(id = 33 + row_number()) |> 
+presidential |>
+  mutate(id = 33 + row_number()) |>
   ggplot(aes(x = start, y = id)) +
   geom_point() +
   geom_segment(aes(xend = end, yend = id)) +
@@ -512,22 +504,22 @@ The theme setting `legend.position` controls where the legend is drawn:
 
 ```{r}
 #| fig-alt: |
-#|   Four scatterplots of highway fuel efficiency versus engine size of cars 
-#|   where points are colored based on class of car. Clockwise, the legend 
+#|   Four scatterplots of highway fuel efficiency versus engine size of cars
+#|   where points are colored based on class of car. Clockwise, the legend
 #|   is placed on the right, left, top, and bottom of the plot.
 
 base <- ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point(aes(color = class)) 
+  geom_point(aes(color = class))
 
- # the default  right, then left
+# the default  right, then left
 base + theme(legend.position = "right") +
-base + theme(legend.position = "left") 
+  base + theme(legend.position = "left")
 
- # then top, then bottom
-base + 
+# then top, then bottom
+base +
   theme(legend.position = "top") +
   guides(color = guide_legend(nrow = 3)) +
-base + 
+  base +
   theme(legend.position = "bottom") +
   guides(color = guide_legend(nrow = 3))
 ```
@@ -541,10 +533,10 @@ This is particularly useful if you have used a low `alpha` to display many point
 
 ```{r}
 #| fig-alt: |
-#|   Scatterplot of highway fuel efficiency versus engine size of cars 
-#|   where points are colored based on class of car. Overlaid on the plot is a 
-#|   smooth curve. The legend is in the bottom and classes are listed 
-#|   horizontally in two rows. The points in the legend are larger than the points 
+#|   Scatterplot of highway fuel efficiency versus engine size of cars
+#|   where points are colored based on class of car. Overlaid on the plot is a
+#|   smooth curve. The legend is in the bottom and classes are listed
+#|   horizontally in two rows. The points in the legend are larger than the points
 #|   in the plot.
 
 ggplot(mpg, aes(x = displ, y = hwy)) +
@@ -568,9 +560,9 @@ For example, it's easier to see the precise relationship between `carat` and `pr
 ```{r}
 #| fig-width: 7
 #| fig-alt: |
-#|   Two plots of price versus carat of diamonds. Data binned and the color of 
-#|   the rectangles representing each bin based on the number of points that 
-#|   fall into that bin. In the second plot, price and carat values 
+#|   Two plots of price versus carat of diamonds. Data binned and the color of
+#|   the rectangles representing each bin based on the number of points that
+#|   fall into that bin. In the second plot, price and carat values
 #|   are logged and the axis labels shows the logged values.
 
 # price vs. caret
@@ -578,7 +570,8 @@ ggplot(diamonds, aes(x = carat, y = price)) +
   geom_hex()
 
 # log10 price vs log10 caret
-ggplot(diamonds, aes(x = log10(carat), y = log10(price))) + geom_hex()
+ggplot(diamonds, aes(x = log10(carat), y = log10(price))) +
+  geom_hex()
 ```
 
 However, the disadvantage of this transformation is that the axes are now labelled with the transformed values, making it hard to interpret the plot.
@@ -587,13 +580,13 @@ This is visually identical, except the axes are labelled on the original data sc
 
 ```{r}
 #| fig-alt: |
-#|   Plot of price versus carat of diamonds. Data binned and the color of 
-#|   the rectangles representing each bin based on the number of points that 
+#|   Plot of price versus carat of diamonds. Data binned and the color of
+#|   the rectangles representing each bin based on the number of points that
 #|   fall into that bin. The axis labels are on the original data scale.
 
 ggplot(diamonds, aes(x = carat, y = price)) +
-  geom_hex() + 
-  scale_x_log10() + 
+  geom_hex() +
+  scale_x_log10() +
   scale_y_log10()
 ```
 
@@ -607,17 +600,18 @@ The two plots below look similar, but there is enough difference in the shades o
 ```{r}
 #| fig-width: 8
 #| fig-alt: |
-#|   Two scatterplots of highway mileage versus engine size where points are 
-#|   colored by drive type. The first plot uses the default 
-#|   ggplot2 color palette and the plot on the right uses a different color 
+#|   Two scatterplots of highway mileage versus engine size where points are
+#|   colored by drive type. The first plot uses the default
+#|   ggplot2 color palette and the plot on the right uses a different color
 #|   palette.
 
 # default color palette
 ggplot(mpg, aes(x = displ, y = hwy)) +
-  geom_point(aes(color = drv)) 
+  geom_point(aes(color = drv))
 
 # RColorBrewer palette
-ggplot(mpg, aes(x = displ, y = hwy)) + geom_point(aes(color = drv)) + 
+ggplot(mpg, aes(x = displ, y = hwy)) +
+  geom_point(aes(color = drv)) +
   scale_color_brewer(palette = "Set1")
 ```
 
@@ -627,8 +621,8 @@ This will also help ensure your plot is interpretable in black and white.
 
 ```{r}
 #| fig-alt: |
-#|   Two scatterplots of highway mileage versus engine size where both color 
-#|   and shape of points are based on drive type. The color palette is not 
+#|   Two scatterplots of highway mileage versus engine size where both color
+#|   and shape of points are based on drive type. The color palette is not
 #|   the default ggplot2 palette.
 
 ggplot(mpg, aes(x = displ, y = hwy)) +
@@ -647,9 +641,9 @@ This often arises if you've used `cut()` to make a continuous variable into a ca
 #| fig-cap: All colorBrewer scales.
 #| fig-asp: 2.5
 #| fig-alt: |
-#|   All colorBrewer scales. One group goes from light to dark colors. 
-#|   Another group is a set of non ordinal colors. And the last group has 
-#|   diverging scales (from dark to light to dark again). Within each set 
+#|   All colorBrewer scales. One group goes from light to dark colors.
+#|   Another group is a set of non ordinal colors. And the last group has
+#|   diverging scales (from dark to light to dark again). Within each set
 #|   there are a number of palettes.
 
 par(mar = c(0, 3, 0, 0))
@@ -662,12 +656,13 @@ One approach for assigning these colors is using hex color codes:
 
 ```{r}
 #| fig-alt: |
-#|   Line plot of id number of presidents versus the year they started their 
-#|   presidency. Start year is marked with a point and a segment that starts 
-#|   there and ends at the end of the presidency. Democratic presidents are 
+#|   Line plot of id number of presidents versus the year they started their
+#|   presidency. Start year is marked with a point and a segment that starts
+#|   there and ends at the end of the presidency. Democratic presidents are
 #|   represented in blue and Republicans in red.
 
-presidential |> mutate(id = 33 + row_number()) |>
+presidential |>
+  mutate(id = 33 + row_number()) |>
   ggplot(aes(x = start, y = id, color = party)) +
   geom_point() +
   geom_segment(aes(xend = end, yend = id)) +
@@ -687,8 +682,8 @@ These scales are available as continuous (`c`), discrete (`d`), and binned (`b`)
 #| fig-width: 6
 #| fig-alt: |
 #|   Three plots.
-#|   The first plot uses the default, continuous 
-#|   ggplot2 scale. The second plot uses the viridis, continuous scale, and the 
+#|   The first plot uses the default, continuous
+#|   ggplot2 scale. The second plot uses the viridis, continuous scale, and the
 #|   third plot uses the viridis, binned scale.
 
 df <- tibble(
@@ -696,14 +691,19 @@ df <- tibble(
   y = rnorm(10000)
 )
 
-ggplot(df, aes(x, y, fill = x)) + geom_point(shape = 24, size = 3) +
+ggplot(df, aes(x, y, fill = x)) +
+  geom_point(shape = 24, size = 3) +
   labs(title = "Default, continuous", x = NULL, y = NULL)
-  
-ggplot(df, aes(x, y, fill = x)) + geom_point(shape = 24, size = 3)  + scale_fill_viridis_c() +
+
+ggplot(df, aes(x, y, fill = x)) +
+  geom_point(shape = 24, size = 3) +
+  scale_fill_viridis_c() +
   labs(title = "Viridis, continuous", x = NULL, y = NULL)
 
-ggplot(df, aes(x, y, fill = x)) + geom_point(shape = 24, size = 3)  + scale_fill_viridis_b() 
-  labs(title = "Viridis, binned", x = NULL, y = NULL)
+ggplot(df, aes(x, y, fill = x)) +
+  geom_point(shape = 24, size = 3) +
+  scale_fill_viridis_b()
+labs(title = "Viridis, binned", x = NULL, y = NULL)
 ```
 
 Note that all color scales come in two varieties: `scale_color_*()` and `scale_fill_*()` for the `color` and `fill` aesthetics respectively (the color scales are available in both UK and US spellings).
@@ -725,17 +725,18 @@ Subsetting the data has affected the x and y scales as well as the smooth curve.
 ```{r}
 #| fig-width: 8
 #| fig-alt: |
-#|   On the left, scatterplot of highway mileage vs. displacement, with 
-#|   displacement. The smooth curve overlaid shows a decreasing, and then 
-#|   increasing trend, like a hockey stick. On the right, same variables 
-#|   are plotted with displacement ranging only from 5 to 6 and highway 
-#|   mileage ranging only from 10 to 25. The smooth curve overlaid shows a 
-#|   trend that's slightly increasing first and then decreasing. 
+#|   On the left, scatterplot of highway mileage vs. displacement, with
+#|   displacement. The smooth curve overlaid shows a decreasing, and then
+#|   increasing trend, like a hockey stick. On the right, same variables
+#|   are plotted with displacement ranging only from 5 to 6 and highway
+#|   mileage ranging only from 10 to 25. The smooth curve overlaid shows a
+#|   trend that's slightly increasing first and then decreasing.
 
 # All data vs. subsetted data
 ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_point(aes(color = drv)) +
-  geom_smooth() + mpg |>
+  geom_smooth() +
+  mpg |>
   filter(displ >= 5 & displ <= 6 & hwy >= 10 & hwy <= 25) |>
   ggplot(aes(x = displ, y = hwy)) +
   geom_point(aes(color = drv)) +
@@ -750,10 +751,10 @@ Therefore, to zoom in on a region of the plot, it's generally best to use `coord
 3.  Setting `xlim` and `ylim` in `coord_cartesian()` (right).
 ```{r}
 #| fig-alt: |
-#|   On the left, scatterplot of highway mileage vs. displacement, with 
-#|   displacement ranging from 5 to 6 and highway mileage ranging from 
-#|   10 to 25. The smooth curve overlaid shows a trend that's slightly 
-#|   increasing first and then decreasing. On the right, same variables 
+#|   On the left, scatterplot of highway mileage vs. displacement, with
+#|   displacement ranging from 5 to 6 and highway mileage ranging from
+#|   10 to 25. The smooth curve overlaid shows a trend that's slightly
+#|   increasing first and then decreasing. On the right, same variables
 #|   are plotted with the same limits, however the smooth curve overlaid
 #|   shows a relatively flat trend with a slight increase at the end.
 
@@ -762,7 +763,9 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_point(aes(color = drv)) +
   geom_smooth() +
   scale_x_continuous(limits = c(5, 6)) +
-  scale_y_continuous(limits = c(10, 25)) + ggplot(mpg, aes(x = displ, y = hwy)) + geom_point(aes(color = drv)) +
+  scale_y_continuous(limits = c(10, 25)) +
+  ggplot(mpg, aes(x = displ, y = hwy)) +
+  geom_point(aes(color = drv)) +
   geom_smooth() +
   coord_cartesian(xlim = c(5, 6), ylim = c(10, 25))
 ```
@@ -774,11 +777,11 @@ For example, if we extract two classes of cars and plot them separately, it's di
 #| fig-alt: |
 #|   On the left, a scatterplot of highway mileage vs. displacement of SUVs.
 #|   On the right, a scatterplot of the same variables for compact cars.
-#|   Points are colored by drive type for both plots. Among SUVs more of 
-#|   the cars are 4-wheel drive and the others are rear-wheel drive, while 
-#|   among compact cars more of the cars are front-wheel drive and the others 
-#|   are 4-wheel drive. SUV plot shows a clear negative relationship 
-#|   between higway mileage and displacement while in the compact cars plot 
+#|   Points are colored by drive type for both plots. Among SUVs more of
+#|   the cars are 4-wheel drive and the others are rear-wheel drive, while
+#|   among compact cars more of the cars are front-wheel drive and the others
+#|   are 4-wheel drive. SUV plot shows a clear negative relationship
+#|   between higway mileage and displacement while in the compact cars plot
 #|   the relationship is much flatter.
 
 suv <- mpg |> filter(class == "suv")
@@ -786,7 +789,8 @@ compact <- mpg |> filter(class == "compact")
 
 # suv vs compact
 ggplot(suv, aes(x = displ, y = hwy, color = drv)) +
-  geom_point() + ggplot(compact, aes(x = displ, y = hwy, color = drv)) +
+  geom_point() +
+  ggplot(compact, aes(x = displ, y = hwy, color = drv)) +
   geom_point()
 ```
 
@@ -796,12 +800,12 @@ One way to overcome this problem is to share scales across multiple plots, train
 #| fig-alt: |
 #|   On the left, a scatterplot of highway mileage vs. displacement of SUVs.
 #|   On the right, a scatterplot of the same variables for compact cars.
-#|   Points are colored by drive type for both plots. Both plots are plotted 
-#|   on the same scale for highway mileage, displacement, and drive type, 
-#|   resulting in the legend showing all three types (front, rear, and 4-wheel 
-#|   drive) for both plots even though there are no front-wheel drive SUVs and 
-#|   no rear-wheel drive compact cars. Since the x and y scales are the same, 
-#|   and go well beyond minimum or maximum highway mileage and displacement, 
+#|   Points are colored by drive type for both plots. Both plots are plotted
+#|   on the same scale for highway mileage, displacement, and drive type,
+#|   resulting in the legend showing all three types (front, rear, and 4-wheel
+#|   drive) for both plots even though there are no front-wheel drive SUVs and
+#|   no rear-wheel drive compact cars. Since the x and y scales are the same,
+#|   and go well beyond minimum or maximum highway mileage and displacement,
 #|   the points do not take up the entire plotting area.
 
 x_scale <- scale_x_continuous(limits = range(mpg$displ))
@@ -813,7 +817,8 @@ ggplot(suv, aes(x = displ, y = hwy, color = drv)) +
   geom_point() +
   x_scale +
   y_scale +
-  col_scale + ggplot(compact, aes(x = displ, y = hwy, color = drv)) +
+  col_scale +
+  ggplot(compact, aes(x = displ, y = hwy, color = drv)) +
   geom_point() +
   x_scale +
   y_scale +
@@ -830,13 +835,14 @@ In this particular case, you could have simply used faceting, but this technique
 ```{r}
 #| fig-show: "hide"
 
-df <- tibble(x = rnorm(10000),
-             y = rnorm(10000))
+df <- tibble(
+  x = rnorm(10000),
+  y = rnorm(10000)
+)
 
 ggplot(df) +
-  geom_point(aes(x = x, y = y,fill = x)) +
-    scale_fill_gradient(low= "yellow", high = "red")
-       
+  geom_point(aes(x = x, y = y, fill = x)) +
+  scale_fill_gradient(low = "yellow", high = "red")
 ```
 
 **Ans-1.4.1.1:**
@@ -870,9 +876,8 @@ ggplot(diamonds, aes(x = carat, y = price)) +
 Finally, you can customize the non-data elements of your plot with a theme:
 
 ```{r}
-
 #| fig-alt: |
-#|   Scatterplot of highway mileage vs. displacement of cars, colored by class 
+#|   Scatterplot of highway mileage vs. displacement of cars, colored by class
 #|   of car. The plot background is white, with gray grid lines.
 
 ggplot(mpg, aes(x = displ, y = hwy)) +
@@ -892,13 +897,13 @@ Many people wonder why the default theme has a gray background. This was a delib
 #| echo: false
 #| fig-cap: The eight themes built-in to ggplot2.
 #| fig-alt: |
-#|   Eight barplots created with ggplot2, each 
-#|   with one of the eight built-in themes: 
+#|   Eight barplots created with ggplot2, each
+#|   with one of the eight built-in themes:
 #|   theme_bw() - White background with grid lines,
 #|   theme_light() - Light axes and grid lines,
 #|   theme_classic() - Classic theme, axes but no grid
-#|   lines, theme_linedraw() - Only black lines, 
-#|   theme_dark() - Dark background for contrast, 
+#|   lines, theme_linedraw() - Only black lines,
+#|   theme_dark() - Dark background for contrast,
 #|   theme_minimal() - Minimal theme, no background,
 #|   theme_gray() - Gray background (default theme),
 #|   theme_void() - Empty theme, only geoms are visible.
@@ -918,8 +923,8 @@ A few other helpful `theme()` components are used to change the placement for fo
 
 ```{r}
 #| fig-alt: |
-#|   Scatterplot of highway fuel efficiency versus engine size of cars, colored 
-#|   by drive. The plot is titled 'Larger engine sizes tend to have lower fuel 
+#|   Scatterplot of highway fuel efficiency versus engine size of cars, colored
+#|   by drive. The plot is titled 'Larger engine sizes tend to have lower fuel
 #|   economy' with the caption pointing to the source of the data, fueleconomy.gov.
 #|   The caption and title are left justified, the legend is inside of the plot
 #|   with a black border.
@@ -962,7 +967,6 @@ ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
 
 **Ans-1.5.1.1:**
 ```{r Ans-1.5.1.1}
-
 ```
 
 
@@ -971,9 +975,6 @@ ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
 
 **Ans-1.5.1.2:**
 ```{r Ans-1.5.1.2}
-
-
-
 ```
 
 
@@ -992,15 +993,15 @@ Then, you place them next to each other with `+`.
 #| fig-width: 6
 #| fig-asp: 0.5
 #| fig-alt: |
-#|   Two plots (a scatterplot of highway mileage versus engine size and a 
-#|   side-by-side boxplots of highway mileage versus drive train) placed next 
+#|   Two plots (a scatterplot of highway mileage versus engine size and a
+#|   side-by-side boxplots of highway mileage versus drive train) placed next
 #|   to each other.
 
-p1 <- ggplot(mpg, aes(x = displ, y = hwy)) + 
-  geom_point() + 
+p1 <- ggplot(mpg, aes(x = displ, y = hwy)) +
+  geom_point() +
   labs(title = "Plot 1")
-p2 <- ggplot(mpg, aes(x = drv, y = hwy)) + 
-  geom_boxplot() + 
+p2 <- ggplot(mpg, aes(x = drv, y = hwy)) +
+  geom_boxplot() +
   labs(title = "Plot 2")
 p1 + p2
 ```
@@ -1012,15 +1013,15 @@ You can also create complex plot layouts using `|` and `/`. In the following, `|
 #| fig-width: 6
 #| fig-asp: 0.8
 #| fig-alt: |
-#|   Three plots laid out such that first and third plot are next to each other 
-#|   and the second plot stretched beneath them. The first plot is a 
-#|   scatterplot of highway mileage versus engine size, third plot is a 
-#|   scatterplot of highway mileage versus city mileage, and the third plot is 
-#|   side-by-side boxplots of highway mileage versus drive train) placed next 
+#|   Three plots laid out such that first and third plot are next to each other
+#|   and the second plot stretched beneath them. The first plot is a
+#|   scatterplot of highway mileage versus engine size, third plot is a
+#|   scatterplot of highway mileage versus city mileage, and the third plot is
+#|   side-by-side boxplots of highway mileage versus drive train) placed next
 #|   to each other.
 
-p3 <- ggplot(mpg, aes(x = cty, y = hwy)) + 
-  geom_point() + 
+p3 <- ggplot(mpg, aes(x = cty, y = hwy)) +
+  geom_point() +
   labs(title = "Plot 3")
 (p1 | p3) / p2
 ```
@@ -1065,16 +1066,20 @@ p4 <- ggplot(mpg, aes(x = hwy, color = drv, fill = drv)) +
 
 p5 <- ggplot(mpg, aes(x = cty, y = hwy, color = drv)) +
   geom_point(show.legend = FALSE) +
-  facet_wrap( ~ drv) +
+  facet_wrap(~drv) +
   labs(title = "Plot 5")
 
 (
   guide_area() / (p1 + p2) / (p3 + p4) / p5
 ) +
-  plot_annotation(title = "City and highway mileage for cars with different drive trains",
-                  caption = "Source: https://fueleconomy.gov.") +
-  plot_layout(guides = "collect",
-              heights = c(1, 3, 2, 4)) &
+  plot_annotation(
+    title = "City and highway mileage for cars with different drive trains",
+    caption = "Source: https://fueleconomy.gov."
+  ) +
+  plot_layout(
+    guides = "collect",
+    heights = c(1, 3, 2, 4)
+  ) &
   theme(legend.position = "top")
 ```
 
@@ -1086,26 +1091,22 @@ If you'd like to learn more about combining and layout out multiple plots with p
     Can you explain why this happens?
 
 ```{r}
-  
+p1 <- ggplot(mpg, aes(x = displ, y = hwy)) +
+  geom_point() +
+  labs(title = "Plot 1")
+p2 <- ggplot(mpg, aes(x = drv, y = hwy)) +
+  geom_boxplot() +
+  labs(title = "Plot 2")
+p3 <- ggplot(mpg, aes(x = cty, y = hwy)) +
+  geom_point() +
+  labs(title = "Plot 3")
 
-    p1 <- ggplot(mpg, aes(x = displ, y = hwy)) + 
-      geom_point() + 
-      labs(title = "Plot 1")
-    p2 <- ggplot(mpg, aes(x = drv, y = hwy)) + 
-      geom_boxplot() + 
-      labs(title = "Plot 2")
-    p3 <- ggplot(mpg, aes(x = cty, y = hwy)) + 
-      geom_point() + 
-      labs(title = "Plot 3")
-
-    (p1 | p2) / p3
+(p1 | p2) / p3
 ```
 
 
 **Ans-1.6.1.1:**
 ```{r Ans-1.6.1.1}
-
-
 ```
 
 2.  Using the three plots from the previous exercise, recreate the following patchwork.
@@ -1122,7 +1123,6 @@ knitr::include_graphics("images/3-plots.png")
 
 **Ans-1.6.1.2:**
 ```{r Ans-1.6.1.2}
-
 ```
 
 
