--- a/lessons/02-layers.Rmd
+++ b/lessons/02-layers.Rmd
@@ -400,6 +400,7 @@ Geoms are the fundamental building blocks of ggplot2. You can completely transfo
 For example, the histogram and density plot below reveal that the distribution of highway mileage is bimodal and right skewed while the boxplot reveals two potential outliers.
 
 ```{r}
+#| fig.width: 5
 #| fig-alt: |
 #|   Three plots: histogram, density plot, and box plot of highway
 #|   mileage.
